--- a/src/_locales/ko_KR/messages.json
+++ b/src/_locales/ko_KR/messages.json
@@ -1016,8 +1016,8 @@
     "description": "Removes the specified browsing data."
   },
   "commandDescriptionRunMultiPurposeCommand": {
-    "message": "성공할 때까지 사용자 정의 명령 시퀀스를 하나씩 실행합니다.",
-    "description": "Runs a custom sequence of commands one by one until one succeeds."
+    "message": "여러 명령을 하나로 결합하고 주어진 컨텍스트/조건에서 성공적으로 실행되는 첫 번째 명령을 실행합니다.",
+    "description": "Combines multiple commands into one and executes the first command which runs successfully under the given context/conditions."
   },
   "commandSettingLabelNewTabPosition": {
     "message": "새 탭 위치",
