--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -1546,7 +1546,7 @@
     "description": "Gesturefy has been successfully installed."
   },
   "welcomePageUpperSectionHeadline": {
-    "message": "Никогда не делал жест мыши?\n Попробуйте его прямо сейчас!",
+    "message": "Никогда не делали жест мышью?\n Попробуйте сделать его прямо сейчас!",
     "description": "Never done a mouse gesture before?\r\n Try it out right now!"
   },
   "welcomePageUpperSectionTutorialStep01": {
@@ -1562,15 +1562,15 @@
     "description": "Release the right mouse button"
   },
   "welcomePageLowerSectionReference": {
-    "message": "Прокручивает до самого низа страницы.",
+    "message": "Вы прокрутили страницу до самого низа.",
     "description": "You scrolled to the bottom of the page."
   },
   "welcomePageLowerSectionHeadline": {
-    "message": "Поздравляем, вы успешно выполнили первый жест мыши!",
+    "message": "Поздравляем, вы успешно выполнили первый жест мышью!",
     "description": "Congratulations, you successfully accomplished your very first mouse gesture!"
   },
   "welcomePageLowerSectionGetStartedText": {
-    "message": "Создайте столько жестов, сколько вы хотите соответствовать своему стилю просмотра и сделать ежедневный просмотр проще, быстрее и намного удобнее. Начните сейчас персонализировать жесты с Gesturefy!",
+    "message": "Создавайте столько жестов, сколько хотите, в соответствии с вашим индивидуальным стилем просмотра и сделайте ежедневный просмотр страниц проще, быстрее и удобнее. Начните прямо сейчас и настройте Gesturefy!",
     "description": "Create as many gestures as you want to suit your individual browsing style and make your daily browsing easier, faster and a lot more fun. Get started now and personalize Gesturefy!"
   },
   "welcomePageLowerSectionGetStartedLink": {
@@ -1578,7 +1578,7 @@
     "description": "Set Up Your Gestures"
   },
   "welcomePageLowerSectionLearnMoreText": {
-    "message": "Все запутались? Нажмите на ссылку ниже, чтобы быстро разобраться с Gesturefy и запустить руководство по устранению неполадок.",
+    "message": "Все еще не понимаете? Нажмите на ссылку ниже, чтобы быстро разобраться с Gesturefy и запустить руководство по устранению неполадок.",
     "description": "Still confused? Click the link below for a quick break-down and if you can't get Gesturefy up and running you can also find a troubleshooting guide there."
   },
   "welcomePageLowerSectionLearnMoreLink": {
