Fix mouse gesture termination bug (#615) The mouse gesture was not terminated while another button was pressed. Additional changes: Cancel mouse gesture when another mouse button is pressed. Remove cancellation by suppression key.

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -186,8 +186,8 @@
     "description": "The duration in seconds until the gesture is cancelled."
   },
   "settingDescriptionSuppressionKey": {
-    "message": "Cancels the active gesture or prevents a new gesture from being triggered while the key is pressed.",
-    "description": "Cancels the active gesture or prevents a new gesture from being triggered while the key is pressed."
+    "message": "Prevents a gesture from being triggered while the modifier key is pressed.",
+    "description": "Prevents a gesture from being triggered while the modifier key is pressed."
   },
   "settingDescriptionDistanceThreshold": {
     "message": "The minimum distance the mouse must be moved until the start of a gesture is recognized.",
