--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1119,6 +1119,10 @@
     "message": "Scroll duration",
     "description": "Scroll duration"
   },
+  "commandSettingLabelScrollProportion": {
+    "message": "Scroll proportion",
+    "description": "Scroll proportion"
+  },
   "commandSettingLabelFocusIncludePinned": {
     "message": "Include pinned tabs",
     "description": "Include pinned tabs"
@@ -1303,6 +1307,10 @@
   "commandSettingDescriptionScrollDuration": {
     "message": "The duration in milliseconds the scroll animation should take.",
     "description": "The duration in milliseconds the scroll animation should take."
+  },
+  "commandSettingDescriptionScrollProportion": {
+    "message": "The percentage of the viewport height by which the page should be scrolled.",
+    "description": "The percentage of the viewport height by which the page should be scrolled."
   },
   "commandSettingDescriptionFocusIncludePinned": {
     "message": "Determines if pinned tabs should be treated as the leftmost tabs.",
